--- a/caminhada/passo3/ex001.html
+++ b/caminhada/passo3/ex001.html
@@ -16,13 +16,23 @@
     <h1>Inicializando os estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em .JS</p>
-    <div>Clique em mim</div>
+    <h2 class="sub">Modificações com DOM:</h2>
+    <div id="i">Clique em mim</div>
+    <br>
     <script>
         var p1 = window.document.getElementsByTagName('p')[1]
         var p2 = window.document.getElementsByTagName('p')[0]
         window.document.write(p1.innerHTML)
         document.write('<br>')
         document.write(p2.innerHTML)
+        document.write('<br>')
+        var d = window.document.getElementById("i")
+        d.style.background = "green"
+        d.style.color = "white"
+        d.innerText = "Estou aguardando..."
+        var c = window.document.getElementsByClassName("sub")[0]
+        c.style.color = "pink"
+
     </script>
 </body>
 </html>
