ex002 e ex003 passo 3

--- a/caminhada/passo3/ex001.html
+++ b/caminhada/passo3/ex001.html
@@ -31,7 +31,7 @@
         d.style.color = "white"
         d.innerText = "Estou aguardando..."
         var c = window.document.getElementsByClassName("sub")[0]
-        c.style.color = "pink"
+        c.style.color = "purple"
 
     </script>
 </body>
