modificações de estrutura

--- a/caminhada/passo1/ex001.html
+++ b/caminhada/passo1/ex001.html
@@ -15,11 +15,6 @@
 <body>
     <h1>Hello, world!</h1>
     <p>Já me livrei da maldição!</p>
-    <script>
-        alert('Minha primeira mensagem');
-        confirm('Está gostando de de Js ?'); //janela com botão Ok e Cance
-       var nome = prompt('Qual é seu nome?'); //vai perguntar o nome...
-       alert(nome);
-    </script>
+    <script src="ex001.js"></script>
 </body>
 </html>
