--- a/caminhada/passo2/ex001.html
+++ b/caminhada/passo2/ex001.html
@@ -15,9 +15,6 @@
 <body>
     <h1>Hello, world!</h1>
     <p>Já me livrei da maldição!</p>
-    <script>
-       var nome = prompt('Qual é seu nome?'); 
-       alert("Nice to meet you " + nome + "!"); //Concatenação
-    </script>
+    <script src="ex001.js"></script>
 </body>
 </html>
