--- a/caminhada/passo2/ex003.html
+++ b/caminhada/passo2/ex003.html
@@ -13,10 +13,6 @@
 </head>
 <body>
     
-    <script>
-        var nome = prompt("Qual é seu nome? ");
-        document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras.<br></br>`);
-        document.write(`Seu nome em letra maiuscula é ${nome.toLocaleUpperCase()}`);
-    </script>
+    <script src="ex003.js"></script>
 </body>
 </html>
