--- a/caminhada/passo3/ex002.html
+++ b/caminhada/passo3/ex002.html
@@ -21,23 +21,6 @@
         Interaja...
     </div>
 
-    <script>
-          var area = window.document.getElementById("area")
-          area.addEventListener("click", clicar)
-          area.addEventListener("mouseenter", entrar)
-          area.addEventListener("mouseout", sair)
-
-        function clicar(){
-            area.innerText = "Clicou!!"
-            area.style.background = "red"
-        }
-        function entrar(){
-            area.innerText = "Entrou!"
-        }
-        function sair(){
-            area.innerText = "Interaja..."
-            area.style.background = "green"
-        }
-    </script>
+    <script src="ex002.js"></script>
 </body>
 </html>
